--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 body {
   @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100;
 }
+
+@layer base {
+  html {
+    @apply text-xs;
+  }
+
+  @screen sm {
+    html {
+      @apply text-xs;
+    }
+  }
+
+  @screen md {
+    html {
+      @apply text-base;
+    }
+  }
+}
